@@ -1,0 +1,5 @@
+<tmpl_loop page_loop>
+<title><tmpl_var title></title>
+<tmpl_var page>
+</tmpl_loop>
+
